# Data-Analysis-GUI

./: .gitignore  CHANGELOG.md  PatchBatch.spec  README.md  build_macos.py  build_windows.py  filetree.txt  filetree_full.py  pyproject.toml  requirements.txt  version_info.txt
.github/workflows/: release.yaml  test.yml
src/data_analysis_gui/: __init__.py  cli.py  convert_to_pyside6.py  filetree.txt  main.py  main_window.py  plot_manager.py
src/data_analysis_gui.egg-info/: PKG-INFO  requires.txt
src/data_analysis_gui/config/: __init__.py  environment.py  logging.py  plot_style.py  settings.py  themes.py
src/data_analysis_gui/core/: __init__.py  analysis_engine.py  analysis_plot.py  app_controller.py  channel_definitions.py  data_extractor.py  dataset.py  exceptions.py  iv_analysis.py  metrics_calculator.py  models.py  params.py  peak_snapper.py  plot_formatter.py  session_settings.py
src/data_analysis_gui/core/loaders/: __init__.py  abf_loader.py
src/data_analysis_gui/dialogs/: __init__.py  analysis_plot_dialog.py  batch_dialog.py  batch_results_window.py  bg_subtraction_dialog.py  current_density_dialog.py  current_density_results_window.py
src/data_analysis_gui/gui_services/: __init__.py  file_dialog_service.py
src/data_analysis_gui/infrastructure/: file_io.py
src/data_analysis_gui/services/: __init__.py  analysis_manager.py  batch_processor.py  bg_subtraction_service.py  current_density_service.py  data_manager.py  plot_service.py
src/data_analysis_gui/widgets/: __init__.py  channel_toggle.py  control_panel.py  custom_inputs.py  custom_toolbar.py  shared_widgets.py
tests/: test_batch_analysis.py  test_current_density.py  test_dual_batch.py  test_dual_range.py  test_peak.py  test_single_export.py  test_swapped.py  test_swapped_peaks.py
tests/fixtures/golden_data/golden_IV/abf/: IV_Summary.csv
tests/fixtures/golden_data/golden_dual_range/abf/: 250202_007.csv  250202_010.csv  250202_011.csv
tests/fixtures/golden_data/golden_dual_range/mat/: 250202_010.csv  250202_011.csv
tests/fixtures/golden_data/golden_mat_swapped/: 240809_002.csv  240809_003.csv
tests/fixtures/golden_data/golden_swapped_peaks_IV/abf/absolute/: 240809_001.csv  240809_002.csv  240809_003.csv
tests/fixtures/golden_data/golden_swapped_peaks_IV/abf/negative/: 240809_001.csv  240809_002.csv  240809_003.csv
tests/fixtures/golden_data/golden_swapped_peaks_IV/abf/peak-peak/: 240809_001.csv  240809_002.csv  240809_003.csv
tests/fixtures/golden_data/golden_swapped_peaks_IV/abf/positive/: 240809_001.csv  240809_002.csv  240809_003.csv
tests/fixtures/golden_data/golden_swapped_peaks_IV/mat/absolute/: 240809_001.csv  (+2 more)
tests/fixtures/golden_data/golden_swapped_time_course/abf/: 240809_001.csv  240809_002.csv  240809_003.csv
tests/fixtures/sample_data/WinWCP files/: 250514_001.wcp  250514_002.wcp  250514_003.wcp  250514_004.wcp  250514_005.wcp  250514_006.wcp  250514_007.wcp  250514_008.wcp  250514_009.wcp  250514_010.wcp  250514_011.wcp  250514_012.wcp
tests/fixtures/sample_data/dual_range/mat/: 250202_010[1-209].mat  250202_011[1-196].mat
(+8 files in other folders)
