[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PatchBatch"
version = "0.9.0-beta.1"
description = "Patch-clamp electrophysiology data analysis tool"
authors = [
  { name="Charles Kissell", email="kissell.r@northeastern.edu" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

dependencies = [
  "PySide6>=6.2.0",
  "pandas>=1.3.0",
  "numpy>=1.20.0",
  "scipy>=1.7.0",
  "matplotlib>=3.6.0",
  "pyabf">=2.3.0"

]

[project.optional-dependencies]
test = [
  "pytest"
]

[project.scripts]
data-analysis-gui = "data_analysis_gui.main:run"

[tool.setuptools.packages.find]
where = ["src"]
include = ["data_analysis_gui*"]
