[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PatchBatch"
version = "0.9.0-beta.2"
description = "Patch-clamp electrophysiology data analysis tool"
authors = [
  { name="Charles Kissell", email="kissell.r@northeastern.edu" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

dependencies = [
  "PySide6>=6.2.0",
  "numpy>=1.20.0",
  "scipy>=1.9.0",
  "matplotlib>=3.6.0",
  "pyabf>=2.3.0"
]

[project.optional-dependencies]
test = [
  "pytest"
]

[project.scripts]
data-analysis-gui = "data_analysis_gui.main:run"

[tool.setuptools.packages.find]
where = ["src"]
include = ["data_analysis_gui*"]
